import type { Knex } from 'knex';

export async function up(knex: Knex): Promise<void> {
    await knex.schema.createTable('revoked_tokens', (table) => {
        table.uuid('id').primary().defaultTo(knex.fn.uuid());
        table.text('token').notNullable().unique();
        table.timestamp('expires_at').notNullable();
        table.timestamp('created_at').defaultTo(knex.fn.now());
    });
}

export async function down(knex: Knex): Promise<void> {
    await knex.schema.dropTable('revoked_tokens');
}
