export interface TeamCategory {
    id: string;
    clubId: string;
    label: string;
    createdAt: string;
    updatedAt: string;
}
