export interface MemberStatus {
  id: string;
  label: string;
}
