erDiagram
    USER {
        uuid id PK
        string display_name
        text bio
        string phone
        string email UK
        string password
        enum role
        timestamp email_verified_at
        timestamp created_at
        timestamp updated_at
    }

    AUTH_TOKEN {
        uuid id PK
        string email
        string token UK
        enum type
        timestamp expires_at
        timestamp created_at
    }

    CLUB {
        uuid id PK
        string name
        string code UK
        text description
        timestamp created_at
        timestamp updated_at
    }

    TEAM {
        uuid id PK
        uuid club_id FK
        uuid category_id FK
        string label
        enum gender
        text description
        timestamp created_at
        timestamp updated_at
    }

    TEAM_CATEGORY {
        uuid id PK
        uuid club_id FK
        string label
        timestamp created_at
        timestamp updated_at
    }

    MEMBER_STATUS {
        uuid id PK
        string label UK
    }

    MEMBER {
        uuid id PK
        uuid user_id FK
        uuid status_id FK
        string first_name
        string last_name
        date birthdate
        enum gender
        timestamp created_at
        timestamp updated_at
    }

    %% UNIQUE(team_id, member_id, role) — a member can hold multiple distinct roles on the same team
    TEAM_ASSIGNMENT {
        uuid id PK
        uuid team_id FK
        uuid member_id FK
        enum role
        timestamp created_at
        timestamp updated_at
    }

    USER_MEMBER {
        uuid id PK
        uuid user_id FK
        uuid member_id FK
        enum type
        string description
        timestamp created_at
    }

    MEMBER_INVITATION {
        uuid id PK
        uuid member_id FK
        uuid invited_by FK
        string email
        enum type
        string description
        string token UK
        timestamp expires_at
        timestamp accepted_at
        timestamp created_at
    }

    REVOKED_TOKEN {
        uuid id PK
        text token UK
        timestamp expires_at
        timestamp created_at
    }

    %% ── Relationships ────────────────────────────────────

    USER          ||--o{ AUTH_TOKEN        : "requests"
    USER          ||--o{ REVOKED_TOKEN      : "revokes"
    CLUB          ||--o{ TEAM               : "has"
    CLUB          ||--o{ TEAM_CATEGORY      : "has"
    TEAM_CATEGORY ||--o{ TEAM               : "categorizes"
    USER          ||--o{ USER_MEMBER         : "linked"
    MEMBER        ||--o{ USER_MEMBER         : "linked"
    USER          ||--o{ MEMBER_INVITATION   : "invites"
    MEMBER        ||--o{ MEMBER_INVITATION   : "invited for"
    MEMBER_STATUS ||--o{ MEMBER             : "describes"
    MEMBER        ||--o{ TEAM_ASSIGNMENT    : "assigned"
    TEAM          ||--o{ TEAM_ASSIGNMENT    : "includes"
